# adk-pkgbuild

./: README.md  checksum.txt  git-v2.sh
ADK-Extras/ADK-Linux-Special/coretime/src/coretime-v4.4.0/: .gitignore  CMakeLists.txt  LICENSE  README.md  org.cubocore.CoreTime.desktop
ADK-Extras/ADK-Linux-Special/coretime/src/coretime-v4.4.0/src/: alarmitemwidget.cpp  alarmitemwidget.h  alarmitemwidget.ui  alarmwidget.cpp  alarmwidget.h  alarmwidget.ui  apirequest.cpp  apirequest.h  astroinfo.cpp  astroinfo.h  calendarmanage.cpp  calendarmanage.h  commonfunc.cpp  commonfunc.h  coretime.cpp  coretime.h  coretime.ui  currentschedule.cpp  currentschedule.h  currentschedule.ui  locationinfo.cpp  locationinfo.h  main.cpp  reminderitemwidget.cpp  reminderitemwidget.h  reminderitemwidget.ui  reminderwidget.cpp  reminderwidget.h  reminderwidget.ui  schedulequeue.cpp  schedulequeue.h  settings.cpp  settings.h  stopwatch.cpp  stopwatch.h  weatherdata.cpp  weatherdata.h  weathericon.cpp  weathericon.h  weatherinfo.cpp  (+4 more)
adk-bluetooth-enable/: PKGBUILD  adk-bluetooth-enable.install
adk-bluetooth-enable-git/: PKGBUILD
adk-calamares-config/: PKGBUILD  PKGBUILD.old  adk-calamares-config-r13.687e474-1-any.pkg.tar.zst  adk-calamares-config-r13.687e474-1-any.pkg.tar.zst.sig
adk-calamares-config-git/: PKGBUILD
adk-calamares-linux-xanmod-edge-config/: PKGBUILD
adk-dark-git/: PKGBUILD
adk-grub-dark-git/: PKGBUILD
adk-grub-light-git/: PKGBUILD
adk-grub-poly-dark/: PKGBUILD
adk-grub-poly-light/: PKGBUILD
adk-kde-config/: PKGBUILD
adk-kde-settings/: PKGBUILD
adk-keyring/: ADK-Linux credits  Makefile  PKGBUILD  adk-keyring-2.1-10-any.pkg.tar.zst  adk-keyring-2.1-10-any.pkg.tar.zst.sig  adk-keyring.install  adk-revoked  adk-trusted  adk.gpg
adk-mirrorlist/: PKGBUILD
adk-mirrorlist-git/: PKGBUILD
adk-neofetch/: PKGBUILD
adk-neofetch-git/: PKGBUILD
adk-plasma-config/: PKGBUILD
adk-printer-config/: PKGBUILD  autoconf-2-70.diff
adk-printer-enable/: PKGBUILD
adk-printer-enable-git/: PKGBUILD
adk-scantool/: PKGBUILD  adk-scantool-r12.6b152ca-1-x86_64.pkg.tar.zst  adk-scantool-r12.6b152ca-1-x86_64.pkg.tar.zst.sig
adk-sddm-sugar-candy/: PKGBUILD
adk-sddm-sugar-candy-git/: PKGBUILD
adk-ssh-enable/: PKGBUILD  adk-ssh-enable.install
adk-ssh-enable-git/: PKGBUILD
adk-system-enable.build/: PKGBUILD  adk-system-enable.install
adk-system-installation/: PKGBUILD
adk-system-installation-git/: PKGBUILD
adk-wallpapers/: PKGBUILD
adk-wallpapers-git/: PKGBUILD
adk-xfce-config/: PKGBUILD
adklinux-cinnamon-git/: PKGBUILD
adklinux-iso-config-git/: PKGBUILD
adklinux-keyring/: PKGBUILD  adklinux-trusted
adklinux-keyring-git/: PKGBUILD
(+225 files in other folders)
